add developing page.html

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,8 @@
 @import './modules/archive-header';
 @import './modules/main-posts';
 @import './modules/single-main-post';
+@import './modules/features';
+@import './modules/feature';
 
 p{
 	&:last-child{
