--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import './modules/single-main-post';
 @import './modules/features';
 @import './modules/feature';
+@import './modules/custom-content';
 
 p{
 	&:last-child{
