--- a/src/scss/modules/_promo.scss
+++ b/src/scss/modules/_promo.scss
@@ -4,33 +4,28 @@
 		margin-bottom: 0;
 		overflow: hidden;
 
-		&:after,
-		&:before{
-
+		&:before,
+		&:after{
+			content: '';
+			position: absolute;
+			background-color: $green;
+			transition: all .35s;
 		}
 
 		&:before{
-			content: '';
-			position: absolute;
 			top: .75rem;
 			left: .75rem;
 			width: 3rem;
 			height: 3rem;
-			background-color: $green;
 			z-index: 0;
-			transition: all .35s;
 		}
 
 		&:after{
-			content: '';
-			position: absolute;
 			bottom: 0rem;
 			right: .75rem;
 			width: 9.125rem;
 			height: 9.125rem;
-			background-color: $green;
 			z-index: 0;
-			transition: all .35s;
 		}
 
 		&:hover{
@@ -41,6 +36,19 @@
 
 			&:before{
 				margin-left: .375rem;
+			}
+		}
+
+		&--related{
+			&:hover{
+				&:after{
+					margin-right: .375rem;
+					margin-bottom: .375rem;
+				}
+
+				&:before{
+					margin-left: .1875rem;
+				}
 			}
 		}
 	}
@@ -56,5 +64,17 @@
 		margin-bottom: 1.5rem;
 		margin-left: .75rem;
 		z-index: 1;
+
+		&--single{
+			height: 31.25rem;
+		}
+
+		&--related{
+			width: calc(100% - 1.125rem);
+			height: 13.5rem;
+			margin-right: 1.125rem;
+			margin-bottom: .75rem;
+			margin-left: .375rem;
+		}
 	}
 }
