--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import './modules/features';
 @import './modules/feature';
 @import './modules/custom-content';
+@import './modules/process';
 
 p{
 	&:last-child{
