added second version of index.html

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,8 @@
 @import './modules/feature';
 @import './modules/custom-content';
 @import './modules/process';
+@import './modules/hero';
+@import './modules/helpers';
 
 p{
 	&:last-child{
